# 1proj

./: .gitignore
NewRes2/: CMakeLists.txt  mainic.cpp
Res1/: CMakeLists.txt  main.cpp
Res2/: CMakeLists.txt
Res2/labsic/: CMakeLists.txt
